// DO NOT EDIT
// Generated by JFlex 1.9.1 http://jflex.de/
// source: Lexer.flex

package practica1.notebookmovil.analizadores;

import java.util.ArrayList;
import java_cup.runtime.*;
import practica1.notebookmovil.analizadores.errores.ErrorLexico;


@SuppressWarnings("fallthrough")
public class Lexer implements java_cup.runtime.Scanner {

  /** This character denotes the end of file. */
  public static final int YYEOF = -1;

  /** Initial size of the lookahead buffer. */
  private static final int ZZ_BUFFERSIZE = 16384;

  // Lexical states.
  public static final int YYINITIAL = 0;

  /**
   * ZZ_LEXSTATE[l] is the state in the DFA for the lexical state l
   * ZZ_LEXSTATE[l+1] is the state in the DFA for the lexical state l
   *                  at the beginning of a line
   * l is of the form l = 2*k, k a non negative integer
   */
  private static final int ZZ_LEXSTATE[] = {
     0, 0
  };

  /**
   * Top-level table for translating characters to character classes
   */
  private static final int [] ZZ_CMAP_TOP = zzUnpackcmap_top();

  private static final String ZZ_CMAP_TOP_PACKED_0 =
    "\1\0\1\u0100\u10fe\u0200";

  private static int [] zzUnpackcmap_top() {
    int [] result = new int[4352];
    int offset = 0;
    offset = zzUnpackcmap_top(ZZ_CMAP_TOP_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpackcmap_top(String packed, int offset, int [] result) {
    int i = 0;       /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length();
    while (i < l) {
      int count = packed.charAt(i++);
      int value = packed.charAt(i++);
      do result[j++] = value; while (--count > 0);
    }
    return j;
  }


  /**
   * Second-level tables for translating characters to character classes
   */
  private static final int [] ZZ_CMAP_BLOCKS = zzUnpackcmap_blocks();

  private static final String ZZ_CMAP_BLOCKS_PACKED_0 =
    "\11\0\2\1\1\0\2\1\22\0\1\1\1\0\1\2"+
    "\1\3\4\0\1\4\1\5\1\6\1\7\1\10\1\11"+
    "\1\12\1\13\12\14\3\0\1\15\3\0\1\16\2\17"+
    "\1\20\1\21\1\22\2\17\1\23\2\17\1\24\1\25"+
    "\1\26\1\27\1\30\1\17\1\31\1\32\1\33\6\17"+
    "\3\0\1\34\1\35\1\0\1\16\2\17\1\20\1\21"+
    "\1\22\2\17\1\23\2\17\1\24\1\25\1\26\1\27"+
    "\1\30\1\17\1\31\1\32\1\33\6\17\265\0\2\36"+
    "\115\0\1\37\u0180\0";

  private static int [] zzUnpackcmap_blocks() {
    int [] result = new int[768];
    int offset = 0;
    offset = zzUnpackcmap_blocks(ZZ_CMAP_BLOCKS_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpackcmap_blocks(String packed, int offset, int [] result) {
    int i = 0;       /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length();
    while (i < l) {
      int count = packed.charAt(i++);
      int value = packed.charAt(i++);
      do result[j++] = value; while (--count > 0);
    }
    return j;
  }

  /**
   * Translates DFA states to action switch labels.
   */
  private static final int [] ZZ_ACTION = zzUnpackAction();

  private static final String ZZ_ACTION_PACKED_0 =
    "\1\0\1\1\1\2\1\3\1\4\1\5\1\6\1\7"+
    "\1\10\1\11\1\12\1\13\1\14\1\15\1\16\6\17"+
    "\1\20\1\21\1\22\1\23\1\0\7\17\1\24\1\25"+
    "\1\15\5\17\1\0\1\17\1\26\3\17\1\27\1\17"+
    "\1\0\1\17\1\30\3\17\2\31\1\17\1\32\1\17"+
    "\1\33\2\17\2\34\1\17\1\35\2\17\2\36";

  private static int [] zzUnpackAction() {
    int [] result = new int[71];
    int offset = 0;
    offset = zzUnpackAction(ZZ_ACTION_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpackAction(String packed, int offset, int [] result) {
    int i = 0;       /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length();
    while (i < l) {
      int count = packed.charAt(i++);
      int value = packed.charAt(i++);
      do result[j++] = value; while (--count > 0);
    }
    return j;
  }


  /**
   * Translates a state to a row index in the transition table
   */
  private static final int [] ZZ_ROWMAP = zzUnpackRowMap();

  private static final String ZZ_ROWMAP_PACKED_0 =
    "\0\0\0\40\0\40\0\40\0\100\0\40\0\40\0\140"+
    "\0\40\0\40\0\40\0\40\0\40\0\200\0\40\0\240"+
    "\0\300\0\340\0\u0100\0\u0120\0\u0140\0\40\0\u0160\0\u0180"+
    "\0\u01a0\0\u01c0\0\u01e0\0\u0200\0\u0220\0\u0240\0\u0260\0\u0280"+
    "\0\u02a0\0\u02c0\0\40\0\u01c0\0\u02e0\0\u0300\0\u0320\0\u0340"+
    "\0\u0360\0\u0380\0\u03a0\0\u03c0\0\u03e0\0\u0400\0\u0420\0\240"+
    "\0\u0440\0\u0460\0\u0480\0\u04a0\0\u04c0\0\u04e0\0\u0500\0\240"+
    "\0\40\0\u0520\0\40\0\u0540\0\240\0\u0560\0\u0580\0\240"+
    "\0\40\0\u05a0\0\240\0\u05c0\0\u05e0\0\240\0\40";

  private static int [] zzUnpackRowMap() {
    int [] result = new int[71];
    int offset = 0;
    offset = zzUnpackRowMap(ZZ_ROWMAP_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpackRowMap(String packed, int offset, int [] result) {
    int i = 0;  /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length() - 1;
    while (i < l) {
      int high = packed.charAt(i++) << 16;
      result[j++] = high | packed.charAt(i++);
    }
    return j;
  }

  /**
   * The transition table of the DFA
   */
  private static final int [] ZZ_TRANS = zzUnpacktrans();

  private static final String ZZ_TRANS_PACKED_0 =
    "\1\2\1\3\1\4\1\5\1\6\1\7\1\10\1\11"+
    "\1\12\1\13\1\14\1\15\1\16\1\17\3\20\1\21"+
    "\1\22\4\20\1\23\1\24\1\25\2\20\1\26\1\27"+
    "\2\2\43\0\1\30\42\0\1\31\43\0\1\32\1\0"+
    "\1\16\1\0\16\33\20\0\1\20\1\0\16\20\1\0"+
    "\1\27\16\0\1\20\1\0\13\20\1\34\2\20\1\0"+
    "\1\27\16\0\1\20\1\0\11\20\1\35\4\20\1\0"+
    "\1\27\16\0\1\20\1\0\12\20\1\36\3\20\1\0"+
    "\1\27\16\0\1\20\1\0\6\20\1\37\4\20\1\40"+
    "\2\20\1\0\1\27\16\0\1\20\1\0\3\20\1\41"+
    "\12\20\1\0\1\27\16\0\1\27\1\0\16\27\1\0"+
    "\1\27\5\0\1\42\42\0\1\43\45\0\1\44\37\0"+
    "\1\33\1\0\16\33\20\0\1\20\1\0\13\20\1\45"+
    "\2\20\1\0\1\27\16\0\1\20\1\0\13\20\1\46"+
    "\2\20\1\0\1\27\16\0\1\20\1\0\3\20\1\47"+
    "\12\20\1\0\1\27\16\0\1\20\1\0\11\20\1\50"+
    "\4\20\1\0\1\27\16\0\1\20\1\0\5\20\1\51"+
    "\10\20\1\0\1\27\1\52\15\0\1\20\1\0\12\20"+
    "\1\53\3\20\1\0\1\27\5\0\1\54\50\0\1\20"+
    "\1\0\11\20\1\55\4\20\1\0\1\27\16\0\1\20"+
    "\1\0\7\20\1\56\6\20\1\0\1\27\16\0\1\20"+
    "\1\0\13\20\1\57\2\20\1\0\1\27\16\0\1\20"+
    "\1\0\15\20\1\60\1\0\1\27\16\0\1\20\1\0"+
    "\10\20\1\61\5\20\1\0\1\27\30\0\1\62\25\0"+
    "\1\20\1\0\11\20\1\63\4\20\1\0\1\27\5\0"+
    "\1\64\50\0\1\20\1\0\13\20\1\65\2\20\1\0"+
    "\1\27\16\0\1\20\1\0\1\66\15\20\1\0\1\27"+
    "\16\0\1\20\1\0\1\67\15\20\1\0\1\27\16\0"+
    "\1\20\1\0\15\20\1\70\1\0\1\27\35\0\1\71"+
    "\20\0\1\20\1\0\13\20\1\72\2\20\1\0\1\27"+
    "\5\0\1\73\50\0\1\20\1\0\3\20\1\74\12\20"+
    "\1\0\1\27\16\0\1\20\1\0\15\20\1\75\1\0"+
    "\1\27\16\0\1\20\1\0\2\20\1\76\13\20\1\0"+
    "\1\27\16\0\1\20\1\0\15\20\1\77\1\0\1\27"+
    "\16\0\1\20\1\0\14\20\1\100\1\20\1\0\1\27"+
    "\1\0\1\101\14\0\1\20\1\0\11\20\1\102\4\20"+
    "\1\0\1\27\16\0\1\20\1\0\3\20\1\103\12\20"+
    "\1\0\1\27\16\0\1\20\1\0\13\20\1\104\2\20"+
    "\1\0\1\27\16\0\1\20\1\0\3\20\1\105\12\20"+
    "\1\0\1\27\16\0\1\20\1\0\14\20\1\106\1\20"+
    "\1\0\1\27\1\0\1\107";

  private static int [] zzUnpacktrans() {
    int [] result = new int[1536];
    int offset = 0;
    offset = zzUnpacktrans(ZZ_TRANS_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpacktrans(String packed, int offset, int [] result) {
    int i = 0;       /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length();
    while (i < l) {
      int count = packed.charAt(i++);
      int value = packed.charAt(i++);
      value--;
      do result[j++] = value; while (--count > 0);
    }
    return j;
  }


  /** Error code for "Unknown internal scanner error". */
  private static final int ZZ_UNKNOWN_ERROR = 0;
  /** Error code for "could not match input". */
  private static final int ZZ_NO_MATCH = 1;
  /** Error code for "pushback value was too large". */
  private static final int ZZ_PUSHBACK_2BIG = 2;

  /**
   * Error messages for {@link #ZZ_UNKNOWN_ERROR}, {@link #ZZ_NO_MATCH}, and
   * {@link #ZZ_PUSHBACK_2BIG} respectively.
   */
  private static final String ZZ_ERROR_MSG[] = {
    "Unknown internal scanner error",
    "Error: could not match input",
    "Error: pushback value was too large"
  };

  /**
   * ZZ_ATTRIBUTE[aState] contains the attributes of state {@code aState}
   */
  private static final int [] ZZ_ATTRIBUTE = zzUnpackAttribute();

  private static final String ZZ_ATTRIBUTE_PACKED_0 =
    "\1\0\3\11\1\1\2\11\1\1\5\11\1\1\1\11"+
    "\6\1\1\11\3\1\1\0\10\1\1\11\6\1\1\0"+
    "\7\1\1\0\6\1\1\11\1\1\1\11\5\1\1\11"+
    "\5\1\1\11";

  private static int [] zzUnpackAttribute() {
    int [] result = new int[71];
    int offset = 0;
    offset = zzUnpackAttribute(ZZ_ATTRIBUTE_PACKED_0, offset, result);
    return result;
  }

  private static int zzUnpackAttribute(String packed, int offset, int [] result) {
    int i = 0;       /* index in packed string  */
    int j = offset;  /* index in unpacked array */
    int l = packed.length();
    while (i < l) {
      int count = packed.charAt(i++);
      int value = packed.charAt(i++);
      do result[j++] = value; while (--count > 0);
    }
    return j;
  }

  /** Input device. */
  private java.io.Reader zzReader;

  /** Current state of the DFA. */
  private int zzState;

  /** Current lexical state. */
  private int zzLexicalState = YYINITIAL;

  /**
   * This buffer contains the current text to be matched and is the source of the {@link #yytext()}
   * string.
   */
  private char zzBuffer[] = new char[Math.min(ZZ_BUFFERSIZE, zzMaxBufferLen())];

  /** Text position at the last accepting state. */
  private int zzMarkedPos;

  /** Current text position in the buffer. */
  private int zzCurrentPos;

  /** Marks the beginning of the {@link #yytext()} string in the buffer. */
  private int zzStartRead;

  /** Marks the last character in the buffer, that has been read from input. */
  private int zzEndRead;

  /**
   * Whether the scanner is at the end of file.
   * @see #yyatEOF
   */
  private boolean zzAtEOF;

  /**
   * The number of occupied positions in {@link #zzBuffer} beyond {@link #zzEndRead}.
   *
   * <p>When a lead/high surrogate has been read from the input stream into the final
   * {@link #zzBuffer} position, this will have a value of 1; otherwise, it will have a value of 0.
   */
  private int zzFinalHighSurrogate = 0;

  /** Number of newlines encountered up to the start of the matched text. */
  private int yyline;

  /** Number of characters from the last newline up to the start of the matched text. */
  private int yycolumn;

  /** Number of characters up to the start of the matched text. */
  @SuppressWarnings("unused")
  private long yychar;

  /** Whether the scanner is currently at the beginning of a line. */
  @SuppressWarnings("unused")
  private boolean zzAtBOL = true;

  /** Whether the user-EOF-code has already been executed. */
  private boolean zzEOFDone;

  /* user code: */
    public static ArrayList<ErrorLexico> errores = new ArrayList<>();
    public static ArrayList<Token> tokens = new ArrayList<>();
    public ArrayList<ErrorLexico> getErrores() {
        return errores;
    }


  /**
   * Creates a new scanner
   *
   * @param   in  the java.io.Reader to read input from.
   */
  public Lexer(java.io.Reader in) {
    this.zzReader = in;
  }


  /** Returns the maximum size of the scanner buffer, which limits the size of tokens. */
  private int zzMaxBufferLen() {
    return Integer.MAX_VALUE;
  }

  /**  Whether the scanner buffer can grow to accommodate a larger token. */
  private boolean zzCanGrow() {
    return true;
  }

  /**
   * Translates raw input code points to DFA table row
   */
  private static int zzCMap(int input) {
    int offset = input & 255;
    return offset == input ? ZZ_CMAP_BLOCKS[offset] : ZZ_CMAP_BLOCKS[ZZ_CMAP_TOP[input >> 8] | offset];
  }

  /**
   * Refills the input buffer.
   *
   * @return {@code false} iff there was new input.
   * @exception java.io.IOException  if any I/O-Error occurs
   */
  private boolean zzRefill() throws java.io.IOException {

    /* first: make room (if you can) */
    if (zzStartRead > 0) {
      zzEndRead += zzFinalHighSurrogate;
      zzFinalHighSurrogate = 0;
      System.arraycopy(zzBuffer, zzStartRead,
                       zzBuffer, 0,
                       zzEndRead - zzStartRead);

      /* translate stored positions */
      zzEndRead -= zzStartRead;
      zzCurrentPos -= zzStartRead;
      zzMarkedPos -= zzStartRead;
      zzStartRead = 0;
    }

    /* is the buffer big enough? */
    if (zzCurrentPos >= zzBuffer.length - zzFinalHighSurrogate && zzCanGrow()) {
      /* if not, and it can grow: blow it up */
      char newBuffer[] = new char[Math.min(zzBuffer.length * 2, zzMaxBufferLen())];
      System.arraycopy(zzBuffer, 0, newBuffer, 0, zzBuffer.length);
      zzBuffer = newBuffer;
      zzEndRead += zzFinalHighSurrogate;
      zzFinalHighSurrogate = 0;
    }

    /* fill the buffer with new input */
    int requested = zzBuffer.length - zzEndRead;
    int numRead = zzReader.read(zzBuffer, zzEndRead, requested);

    /* not supposed to occur according to specification of java.io.Reader */
    if (numRead == 0) {
      if (requested == 0) {
        throw new java.io.EOFException("Scan buffer limit reached ["+zzBuffer.length+"]");
      }
      else {
        throw new java.io.IOException(
            "Reader returned 0 characters. See JFlex examples/zero-reader for a workaround.");
      }
    }
    if (numRead > 0) {
      zzEndRead += numRead;
      if (Character.isHighSurrogate(zzBuffer[zzEndRead - 1])) {
        if (numRead == requested) { // We requested too few chars to encode a full Unicode character
          --zzEndRead;
          zzFinalHighSurrogate = 1;
        } else {                    // There is room in the buffer for at least one more char
          int c = zzReader.read();  // Expecting to read a paired low surrogate char
          if (c == -1) {
            return true;
          } else {
            zzBuffer[zzEndRead++] = (char)c;
          }
        }
      }
      /* potentially more input available */
      return false;
    }

    /* numRead < 0 ==> end of stream */
    return true;
  }


  /**
   * Closes the input reader.
   *
   * @throws java.io.IOException if the reader could not be closed.
   */
  public final void yyclose() throws java.io.IOException {
    zzAtEOF = true; // indicate end of file
    zzEndRead = zzStartRead; // invalidate buffer

    if (zzReader != null) {
      zzReader.close();
    }
  }


  /**
   * Resets the scanner to read from a new input stream.
   *
   * <p>Does not close the old reader.
   *
   * <p>All internal variables are reset, the old input stream <b>cannot</b> be reused (internal
   * buffer is discarded and lost). Lexical state is set to {@code ZZ_INITIAL}.
   *
   * <p>Internal scan buffer is resized down to its initial length, if it has grown.
   *
   * @param reader The new input stream.
   */
  public final void yyreset(java.io.Reader reader) {
    zzReader = reader;
    zzEOFDone = false;
    yyResetPosition();
    zzLexicalState = YYINITIAL;
    int initBufferSize = Math.min(ZZ_BUFFERSIZE, zzMaxBufferLen());
    if (zzBuffer.length > initBufferSize) {
      zzBuffer = new char[initBufferSize];
    }
  }

  /**
   * Resets the input position.
   */
  private final void yyResetPosition() {
      zzAtBOL  = true;
      zzAtEOF  = false;
      zzCurrentPos = 0;
      zzMarkedPos = 0;
      zzStartRead = 0;
      zzEndRead = 0;
      zzFinalHighSurrogate = 0;
      yyline = 0;
      yycolumn = 0;
      yychar = 0L;
  }


  /**
   * Returns whether the scanner has reached the end of the reader it reads from.
   *
   * @return whether the scanner has reached EOF.
   */
  public final boolean yyatEOF() {
    return zzAtEOF;
  }


  /**
   * Returns the current lexical state.
   *
   * @return the current lexical state.
   */
  public final int yystate() {
    return zzLexicalState;
  }


  /**
   * Enters a new lexical state.
   *
   * @param newState the new lexical state
   */
  public final void yybegin(int newState) {
    zzLexicalState = newState;
  }


  /**
   * Returns the text matched by the current regular expression.
   *
   * @return the matched text.
   */
  public final String yytext() {
    return new String(zzBuffer, zzStartRead, zzMarkedPos-zzStartRead);
  }


  /**
   * Returns the character at the given position from the matched text.
   *
   * <p>It is equivalent to {@code yytext().charAt(pos)}, but faster.
   *
   * @param position the position of the character to fetch. A value from 0 to {@code yylength()-1}.
   *
   * @return the character at {@code position}.
   */
  public final char yycharat(int position) {
    return zzBuffer[zzStartRead + position];
  }


  /**
   * How many characters were matched.
   *
   * @return the length of the matched text region.
   */
  public final int yylength() {
    return zzMarkedPos-zzStartRead;
  }


  /**
   * Reports an error that occurred while scanning.
   *
   * <p>In a well-formed scanner (no or only correct usage of {@code yypushback(int)} and a
   * match-all fallback rule) this method will only be called with things that
   * "Can't Possibly Happen".
   *
   * <p>If this method is called, something is seriously wrong (e.g. a JFlex bug producing a faulty
   * scanner etc.).
   *
   * <p>Usual syntax/scanner level error handling should be done in error fallback rules.
   *
   * @param errorCode the code of the error message to display.
   */
  private static void zzScanError(int errorCode) {
    String message;
    try {
      message = ZZ_ERROR_MSG[errorCode];
    } catch (ArrayIndexOutOfBoundsException e) {
      message = ZZ_ERROR_MSG[ZZ_UNKNOWN_ERROR];
    }

    throw new Error(message);
  }


  /**
   * Pushes the specified amount of characters back into the input stream.
   *
   * <p>They will be read again by then next call of the scanning method.
   *
   * @param number the number of characters to be read again. This number must not be greater than
   *     {@link #yylength()}.
   */
  public void yypushback(int number)  {
    if ( number > yylength() )
      zzScanError(ZZ_PUSHBACK_2BIG);

    zzMarkedPos -= number;
  }


  /**
   * Contains user EOF-code, which will be executed exactly once,
   * when the end of file is reached
   */
  private void zzDoEOF() throws java.io.IOException {
    if (!zzEOFDone) {
      zzEOFDone = true;
    
  yyclose();    }
  }




  /**
   * Resumes scanning until the next regular expression is matched, the end of input is encountered
   * or an I/O-Error occurs.
   *
   * @return the next token.
   * @exception java.io.IOException if any I/O-Error occurs.
   */
  @Override  public java_cup.runtime.Symbol next_token() throws java.io.IOException
  {
    int zzInput;
    int zzAction;

    // cached fields:
    int zzCurrentPosL;
    int zzMarkedPosL;
    int zzEndReadL = zzEndRead;
    char[] zzBufferL = zzBuffer;

    int [] zzTransL = ZZ_TRANS;
    int [] zzRowMapL = ZZ_ROWMAP;
    int [] zzAttrL = ZZ_ATTRIBUTE;

    while (true) {
      zzMarkedPosL = zzMarkedPos;

      boolean zzR = false;
      int zzCh;
      int zzCharCount;
      for (zzCurrentPosL = zzStartRead  ;
           zzCurrentPosL < zzMarkedPosL ;
           zzCurrentPosL += zzCharCount ) {
        zzCh = Character.codePointAt(zzBufferL, zzCurrentPosL, zzMarkedPosL);
        zzCharCount = Character.charCount(zzCh);
        switch (zzCh) {
        case '\u000B':  // fall through
        case '\u000C':  // fall through
        case '\u0085':  // fall through
        case '\u2028':  // fall through
        case '\u2029':
          yyline++;
          yycolumn = 0;
          zzR = false;
          break;
        case '\r':
          yyline++;
          yycolumn = 0;
          zzR = true;
          break;
        case '\n':
          if (zzR)
            zzR = false;
          else {
            yyline++;
            yycolumn = 0;
          }
          break;
        default:
          zzR = false;
          yycolumn += zzCharCount;
        }
      }

      if (zzR) {
        // peek one character ahead if it is
        // (if we have counted one line too much)
        boolean zzPeek;
        if (zzMarkedPosL < zzEndReadL)
          zzPeek = zzBufferL[zzMarkedPosL] == '\n';
        else if (zzAtEOF)
          zzPeek = false;
        else {
          boolean eof = zzRefill();
          zzEndReadL = zzEndRead;
          zzMarkedPosL = zzMarkedPos;
          zzBufferL = zzBuffer;
          if (eof)
            zzPeek = false;
          else
            zzPeek = zzBufferL[zzMarkedPosL] == '\n';
        }
        if (zzPeek) yyline--;
      }
      zzAction = -1;

      zzCurrentPosL = zzCurrentPos = zzStartRead = zzMarkedPosL;

      zzState = ZZ_LEXSTATE[zzLexicalState];

      // set up zzAction for empty match case:
      int zzAttributes = zzAttrL[zzState];
      if ( (zzAttributes & 1) == 1 ) {
        zzAction = zzState;
      }


      zzForAction: {
        while (true) {

          if (zzCurrentPosL < zzEndReadL) {
            zzInput = Character.codePointAt(zzBufferL, zzCurrentPosL, zzEndReadL);
            zzCurrentPosL += Character.charCount(zzInput);
          }
          else if (zzAtEOF) {
            zzInput = YYEOF;
            break zzForAction;
          }
          else {
            // store back cached positions
            zzCurrentPos  = zzCurrentPosL;
            zzMarkedPos   = zzMarkedPosL;
            boolean eof = zzRefill();
            // get translated positions and possibly new buffer
            zzCurrentPosL  = zzCurrentPos;
            zzMarkedPosL   = zzMarkedPos;
            zzBufferL      = zzBuffer;
            zzEndReadL     = zzEndRead;
            if (eof) {
              zzInput = YYEOF;
              break zzForAction;
            }
            else {
              zzInput = Character.codePointAt(zzBufferL, zzCurrentPosL, zzEndReadL);
              zzCurrentPosL += Character.charCount(zzInput);
            }
          }
          int zzNext = zzTransL[ zzRowMapL[zzState] + zzCMap(zzInput) ];
          if (zzNext == -1) break zzForAction;
          zzState = zzNext;

          zzAttributes = zzAttrL[zzState];
          if ( (zzAttributes & 1) == 1 ) {
            zzAction = zzState;
            zzMarkedPosL = zzCurrentPosL;
            if ( (zzAttributes & 8) == 8 ) break zzForAction;
          }

        }
      }

      // store back cached position
      zzMarkedPos = zzMarkedPosL;

      if (zzInput == YYEOF && zzStartRead == zzCurrentPos) {
        zzAtEOF = true;
            zzDoEOF();
              {
                return new Symbol(ParserSym.EOF);
              }
      }
      else {
        switch (zzAction < 0 ? zzAction : ZZ_ACTION[zzAction]) {
          case 1:
            { errores.add(new ErrorLexico(yytext(), yyline + 1, yycolumn + 1, "Léxico", "Caracter desconocido: " + yytext()));
          System.err.println("Error léxico: " + yytext() + " linea: " + String.valueOf(yyline + 1) + " columna: " + String.valueOf(yycolumn + 1));
            }
          // fall through
          case 31: break;
          case 2:
            { /* Ignorar espacios en blanco */
            }
          // fall through
          case 32: break;
          case 3:
            { return new Symbol(ParserSym.COMILLAS, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 33: break;
          case 4:
            { return new Symbol(ParserSym.HEADER1, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 34: break;
          case 5:
            { return new Symbol(ParserSym.PARENTESIS_ABRE, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 35: break;
          case 6:
            { return new Symbol(ParserSym.PARENTESIS_CIERRA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 36: break;
          case 7:
            { return new Symbol(ParserSym.MULTIPLICACION, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 37: break;
          case 8:
            { return new Symbol(ParserSym.SUMA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 38: break;
          case 9:
            { return new Symbol(ParserSym.COMA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 39: break;
          case 10:
            { return new Symbol(ParserSym.RESTA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 40: break;
          case 11:
            { return new Symbol(ParserSym.PUNTO, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 41: break;
          case 12:
            { return new Symbol(ParserSym.DIVISION, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 42: break;
          case 13:
            { return new Symbol(ParserSym.NUMERO, yyline+1, yycolumn+1, Double.parseDouble(yytext()));
            }
          // fall through
          case 43: break;
          case 14:
            { return new Symbol(ParserSym.IGUAL, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 44: break;
          case 15:
            { return new Symbol(ParserSym.CADENA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 45: break;
          case 16:
            { return new Symbol(ParserSym.POTENCIA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 46: break;
          case 17:
            { return new Symbol(ParserSym.VARIABLE, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 47: break;
          case 18:
            { return new Symbol(ParserSym.HEADER2, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 48: break;
          case 19:
            { return new Symbol(ParserSym.TEXT_NEGRITA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 49: break;
          case 20:
            { return new Symbol(ParserSym.HEADER3, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 50: break;
          case 21:
            { return new Symbol(ParserSym.TEXT_NEGRITA_ITALICA, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 51: break;
          case 22:
            { return new Symbol(ParserSym.HEADER4, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 52: break;
          case 23:
            { return new Symbol(ParserSym.PLOT, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 53: break;
          case 24:
            { return new Symbol(ParserSym.HEADER5, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 54: break;
          case 25:
            { return new Symbol(ParserSym.PRINT, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 55: break;
          case 26:
            { return new Symbol(ParserSym.HEADER6, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 56: break;
          case 27:
            { return new Symbol(ParserSym.FORMAT, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 57: break;
          case 28:
            { return new Symbol(ParserSym.ERRORES, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 58: break;
          case 29:
            { return new Symbol(ParserSym.REPORTE, yyline+1, yycolumn+1,yytext());
            }
          // fall through
          case 59: break;
          case 30:
            { return new Symbol(ParserSym.OPERADORES, yyline+1, yycolumn+1, yytext());
            }
          // fall through
          case 60: break;
          default:
            zzScanError(ZZ_NO_MATCH);
        }
      }
    }
  }


}
