package practica1.notebookmovil.analizadores

class Token (val tipo: String?, val linea: Int, val columna: Int, val lexema: String?) {
}