package practica1.notebookmovil.reportes

class OcurrenciaOperacion (
    var tipoOperacion: String,
    var columna: String,
    var ocurrencia: String
){

}