package practica1.notebookmovil.reportes

class ReporteGeneral (
    var caracter: String,
    var columna: Int,
    var tipo: String,
    var descripcion: String
) {
}